#Fix Manu/Raji Fix the button alignment issue

--- a/src/stylesheets/_header.scss
+++ b/src/stylesheets/_header.scss
@@ -66,10 +66,6 @@ header {
     padding: 10px 20px;
     cursor: pointer;
 
-    &:last-child {
-      margin-right: 0;
-    }
-
     background-color: $grey-light;
     color: $black;
 
